fixes footer too small sometimes

--- a/site/themes/automato/static/less/styles.less
+++ b/site/themes/automato/static/less/styles.less
@@ -407,12 +407,13 @@ a:hover {
 }
 
 #footer {
-    background-color: @black;
-    text-align: center;
-    bottom: 0;
-    width: 100%;
-    margin-bottom: 0;
-    height: 140px;
+  background-color: #000000;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 0;
+  min-height: 140px;
+  padding: 20px 0px;
 
     h3,
     h4 {
